alignment corrections

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -543,7 +543,7 @@ body {
   }
   .logo {
     position: absolute;
-    top: 15px;
+    top: 13px;
     right: 15px;
     font-size: 2.5rem;
   }
@@ -624,7 +624,7 @@ body {
 
   .logo {
     position: absolute;
-    top: 6px;
+    top: 15px;
     right: 15px;
     font-size: 2rem;
   }
